force-app/main/default/objects/sma__MAMiniMapSetting__c/sma__MAMiniMapSetting__c.object-meta.xml
<CustomObject>
    <label>MapAnything MiniMap Setting</label>
    <nameField>
        <label>MAMiniMapSetting__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything MiniMap Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>