force-app/main/default/objects/sma__MAMiniMapSetting__c/fields/sma__EntryPoint__c.field-meta.xml
<CustomField>
    <fullName>sma__EntryPoint__c</fullName>
    <label>Entry Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Page Layout</fullName>
            </value>
            <value>
                <fullName>Console</fullName>
            </value>
            <value>
                <fullName>Custom VF Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>