force-app/main/default/objects/sma__MAMiniMapSetting__c/fields/sma__Name__c.field-meta.xml
<CustomField>
    <fullName>sma__Name__c</fullName>
    <externalId>true</externalId>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>