force-app/main/default/objects/sma__MAMiniMapSetting__c/fields/sma__Object__c.field-meta.xml
<CustomField>
    <fullName>sma__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>